CSS/homeStyle.css
main {
    background-color: #2d32af;
    clear: both;
    overflow: auto;
    padding: 25px 5%;
}
.ig-main-left{
    margin-top: 100px;
    float: left;
    clear: left;
    width: 50%;
}
.ig-main-left-text-container{
    color: white;
}
.ig-main-left-text-container > h1{
    font-size: 2.5rem;
    margin-bottom: 5px;
}
.ig-main-left-text-container > p{
    margin: 0;
    font-size: 1.3rem;
}
.ig-main-right{
    float: right;
    clear: right;
}
.ig-main-right-logo{
    height: 400px;
    width: auto;
}
.ig-content{
    clear: both;
    overflow: auto;
    padding: 25px 5%;
}
#episodes{
    float: left;
    clear: left;
    width: 50%;
    overflow-y: scroll;
    overflow-x: hidden;
    padding-right: 2%;
}
.episode {
	height: auto;
    margin-bottom: 60px;
}
.player {
	margin-top: 10px;
	/*background: url("../Images/loading.gif") center center no-repeat;*/
}
.season-title{
    color: red;
    width: 100%;
    border-bottom: solid red
}
.episode-title {
    color: #2d32af;
    font-size: 1.3rem
}
.ep-description {
	color: #2d32af;
}

/* width */
::-webkit-scrollbar {
width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
background: #f1f1f1; 
}

/* Handle */
::-webkit-scrollbar-thumb {
background: red; 
}

